Adding template files for GOMECC-4 to the repo

--- a/edna2qiime.ipynb
+++ b/edna2qiime.ipynb
@@ -18,14 +18,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load the first sheet from each Excel file\n",
-    "studyMetadata = pd.read_excel('/Users/luke.thompson/node/test-data/studyMetadata_gomecc4.xlsx', sheet_name=0)\n",
-    "sampleMetadata = pd.read_excel('/Users/luke.thompson/node/test-data/sampleMetadata_gomecc4.xlsx', sheet_name=0, comment='#')\n",
-    "libraryMetadata = pd.read_excel('/Users/luke.thompson/node/test-data/libraryMetadata_gomecc4.xlsx', sheet_name=0, comment='#')"
+    "studyMetadata = pd.read_excel('studyMetadata_gomecc4.xlsx', sheet_name=0)\n",
+    "sampleMetadata = pd.read_excel('sampleMetadata_gomecc4.xlsx', sheet_name=0, comment='#')\n",
+    "libraryMetadata = pd.read_excel('libraryMetadata_gomecc4.xlsx', sheet_name=0, comment='#')"
    ]
   },
   {
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
