Minor changes to README and comments in the notebook

--- a/edna2qiime.ipynb
+++ b/edna2qiime.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
     "                new_columns[column] = studyMetadataT.loc['study_level', column]\n",
     "                if not pd.isna(studyMetadataT.loc[assay, column]):\n",
     "                    new_columns[column] = studyMetadataT.loc[assay, column]\n",
-    "            # Convert the dictionary to a DataFrame and repeat it for each row in the merged DataFrame\n",
+    "            # Convert the dictionary to a DataFrame with the same indexes as the merged DataFrame, repeating the values for each row\n",
     "            new_columns_df = pd.DataFrame(new_columns, index=merged.index)\n",
     "            # Concatenate the new columns DataFrame with the merged DataFrame\n",
     "            merged = pd.concat([merged, new_columns_df], axis=1)\n",
