renaming output files

--- a/edna2qiime.ipynb
+++ b/edna2qiime.ipynb
@@ -83,22 +83,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Add code to generate manifests also."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create dict of DataFrames to store the merged DataFrames\n",
-    "merged_dfs = {}\n",
+    "merged_md = {}\n",
+    "merged_man = {}\n",
     "\n",
+    "# Loop through each unique combination of 'seq_run_id' and 'assay_name'\n",
     "for runID in seq_run_ids:\n",
     "    for assay in assay_names:\n",
     "        # Get the subset of libraryMetadata for the current 'seq_run_id' and 'assay_name'\n",
     "        libraryMetadata_subset = libraryMetadata[(libraryMetadata['seq_run_id'] == runID) & (libraryMetadata['assay_name'] == assay)]\n",
     "        # Merge the subset of libraryMetadata with sampleMetadata using 'samp_name' as the key and add to list of merged DataFrames\n",
-    "        merged = pd.merge(libraryMetadata_subset, sampleMetadata, left_on='samp_name', right_on='samp_name')\n",
+    "        metadata = pd.merge(libraryMetadata_subset, sampleMetadata, left_on='samp_name', right_on='samp_name')\n",
     "        # If the merged DataFrame is not empty, continue\n",
-    "        if merged.shape[0] > 0:\n",
+    "        if metadata.shape[0] > 0:\n",
     "            # Create a dictionary to hold the new columns\n",
     "            new_columns = {}\n",
     "            # Add each column from studyMetadataT to the dictionary\n",
@@ -107,16 +116,23 @@
     "                if not pd.isna(studyMetadataT.loc[assay, column]):\n",
     "                    new_columns[column] = studyMetadataT.loc[assay, column]\n",
     "            # Convert the dictionary to a DataFrame with the same indexes as the merged DataFrame, repeating the values for each row\n",
-    "            new_columns_df = pd.DataFrame(new_columns, index=merged.index)\n",
+    "            new_columns_df = pd.DataFrame(new_columns, index=metadata.index)\n",
     "            # Concatenate the new columns DataFrame with the merged DataFrame\n",
-    "            merged = pd.concat([merged, new_columns_df], axis=1)\n",
+    "            metadata = pd.concat([metadata, new_columns_df], axis=1)\n",
     "            # Drop columns that contain only NaN values\n",
-    "            merged = merged.dropna(axis=1, how='all')\n",
+    "            metadata = metadata.dropna(axis=1, how='all')\n",
     "            # Add merged DataFrame to the dict of merged DataFrames\n",
-    "            merged_dfs[(runID, assay)] = merged\n",
+    "            merged_md[(runID, assay)] = metadata\n",
     "            # Save the merged DataFrame to a tab-delimited file and drop the index column\n",
-    "            merged.to_csv(f'{project_id}.{runID}.{assay}.tsv', sep='\\t', index=False)"
+    "            metadata.to_csv(f'metadata.{project_id}.{runID}.{assay}.tsv', sep='\\t', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -135,7 +151,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
