--- a/faire2qiime.ipynb
+++ b/faire2qiime.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "bb99b5d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# File for example purposes only"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "4cc0e443",
    "metadata": {},
